@startuml
skinparam classAttributeIconSize 0

package es.proyecto.juego.persistencia {
    class LevelConfig {
        - gson : Gson
        + load(path: String): GameConfig
        - validate(c: GameConfig): void
    }
    class GameSave {
        - gson : Gson
        + save(state: IGameState, path: String): void
        + load(path: String): SaveData
    }
}

package es.proyecto.juego.ui {
    class MainApp {
        - primaryStage : Stage
        + start(primaryStage: Stage): void
        + showInicio(): void
        + showJuego(): void
        + showFin(msg: String, log: String): void
    }

    class GameController {
        - engine : IGameEngine
        + startGame(): void
        + onCellClicked(row: int, col: int): void
        + onUseItemClicked(index: int): void
        + onEndTurn(): void
        + onLoadClicked(): void
        + onSaveClicked(): void
        - refreshAll(): void
        - checkGameStatus(): void
    }

    class MockGameEngine {
        - playerRow : int
        - playerCol : int
        - playerHp : int
        + movePlayer(row: int, col: int): boolean
        + getState(): IGameState
    }
}

package es.proyecto.juego.ui.views {
    class RoomView {
        + update(state: IGameState): void
    }
    class PlayerPanel {
        + update(state: IGameState): void
    }
    class InventoryPanel {
        + update(state: IGameState): void
    }
    class ActionPanel {
        + update(state: IGameState): void
    }
    class LogPanel {
        + update(state: IGameState): void
    }
}

' Relaciones
MainApp --> GameController
GameController --> es.proyecto.juego.logica.IGameEngine : "Inyecta"
MockGameEngine ..|> es.proyecto.juego.logica.IGameEngine : "Implementa"

GameController --> RoomView
GameController --> PlayerPanel
GameController --> InventoryPanel
GameController --> ActionPanel
GameController --> LogPanel

GameController --> GameSave
MainApp --> LevelConfig
@enduml
